e2e/network/sample/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: default
resources:
  - testhttpd.yaml
  - tcp-keepalive.yaml
  - pod.yaml
  - lb.yaml
images:
  - name: ghcr.io/cybozu/testhttpd
    newTag: "0"
  - name: ghcr.io/cybozu/ubuntu-debug
    newTag: "24.04"
  - name: ghcr.io/cybozu/tcp-keepalive
    newTag: "0"
