e2e/network/sample/lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domestic-lb-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: domestic-lb-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: domestic-lb-backend
        identity.neco.cybozu.io: domestic
    spec:
      containers:
      - image: ghcr.io/cybozu/testhttpd:0
        imagePullPolicy: IfNotPresent
        name: testhttpd
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "infinity"]
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: domestic-lb
  labels:
    identity.neco.cybozu.io: domestic
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: domestic-lb-backend
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 43200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internet-lb-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: internet-lb-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: internet-lb-backend
        identity.neco.cybozu.io: internet
    spec:
      containers:
      - image: ghcr.io/cybozu/testhttpd:0
        imagePullPolicy: IfNotPresent
        name: testhttpd
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "infinity"]
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: internet-lb
  labels:
    app.kubernetes.io/name: internet-lb-backend
    identity.neco.cybozu.io: internet
    lbipam.neco.cybozu.io/address-pool: internet
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: internet-lb-backend
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 43200
