e2e/network/sample/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
        identity.neco.cybozu.io: incluster-client
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - name: ubuntu
        image: ghcr.io/cybozu/ubuntu-debug:24.04
        imagePullPolicy: IfNotPresent
        command:
        - sleep
        - infinity
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internet-egress-squid-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internet-egress-squid-client
  template:
    metadata:
      labels:
        app: internet-egress-squid-client
        identity.neco.cybozu.io: internet-client
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - name: ubuntu
        image: ghcr.io/cybozu/ubuntu-debug:24.04
        imagePullPolicy: IfNotPresent
        command:
        - sleep
        - infinity
        env:
        - name: NO_PROXY
          value: 10.0.0.0/8
        - name: HTTP_PROXY
          value: http://squid.internet-egress.svc:3128
        - name: HTTPS_PROXY
          value: http://squid.internet-egress.svc:3128
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internet-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internet-client
  template:
    metadata:
      labels:
        app: internet-client
        identity.neco.cybozu.io: internet-client
      # annotations:
      #   egress.coil.cybozu.com/internet-egress: nat
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - name: ubuntu
        image: ghcr.io/cybozu/ubuntu-debug:24.04
        imagePullPolicy: IfNotPresent
        command:
        - sleep
        - infinity
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domestic-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domestic-client
  template:
    metadata:
      labels:
        app: domestic-client
        identity.neco.cybozu.io: incluster-client
      # annotations:
      #   egress.coil.cybozu.com/domestic-egress: nat
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - name: ubuntu
        image: ghcr.io/cybozu/ubuntu-debug:24.04
        imagePullPolicy: IfNotPresent
        command:
        - sleep
        - infinity
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domestic1-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domestic1-client
  template:
    metadata:
      labels:
        app: domestic1-client
        identity.neco.cybozu.io: incluster-client
      # annotations:
      #   egress.coil.cybozu.com/domestic1-egress: nat
    spec:
      nodeSelector:
        kubernetes.io/hostname: kind-with-bgp-worker
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - name: ubuntu
        image: ghcr.io/cybozu/ubuntu-debug:24.04
        imagePullPolicy: IfNotPresent
        command:
        - sleep
        - infinity
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-client
  template:
    metadata:
      labels:
        app: multi-client
        identity.neco.cybozu.io: incluster-client
      # annotations:
      #   egress.coil.cybozu.com/domestic-egress: nat
      #   egress.coil.cybozu.com/domestic1-egress: nat
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - name: ubuntu
        image: ghcr.io/cybozu/ubuntu-debug:24.04
        imagePullPolicy: IfNotPresent
        command:
        - sleep
        - infinity
