e2e/network/sample/tcp-keepalive.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tcp-keepalive-server
  name: tcp-keepalive-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-keepalive-server
  template:
    metadata:
      labels:
        app: tcp-keepalive-server
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - image: ghcr.io/cybozu/tcp-keepalive:0
        imagePullPolicy: Always
        name: tcp-keepalive-server
        command:
        - tcp-keepalive
        - server
        - -l=0.0.0.0:8000
        ports:
          - containerPort: 8080
            name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-keepalive-server
spec:
  selector:
    app: tcp-keepalive-server
  ports:
  - name: https
    port: 8000
    protocol: TCP
    targetPort: 8000
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tcp-keepalive-client
  name: tcp-keepalive-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-keepalive-client
  template:
    metadata:
      labels:
        app: tcp-keepalive-client
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - image: ghcr.io/cybozu/tcp-keepalive:0
        imagePullPolicy: Always
        name: tcp-keepalive-client
        command:
        - tcp-keepalive
        - client
        args:
        - "-r"
        - "1s"
        - "-i"
        - "15s"
        - "-s"
        - "tcp-keepalive-server.default.svc:8000"
        - "-t"
        - "15s"
        ports:
          - containerPort: 8080
            name: metrics
